package postgres

import "delivery/genproto/delivery"

func (stg *DeliveryStorage) CreateOffice(req *delivery.CreateOfficeRequest) (*delivery.InfoResponse, error) {
	return nil, nil
}

func (stg *DeliveryStorage) GetOffice(req *delivery.GetOfficeRequest) (*delivery.OfficeResponse, error) {
	return nil, nil
}

func (stg *DeliveryStorage) GetAllOffices(req *delivery.GetAllOfficesRequest) (*delivery.GetAllOfficesResponse, error) {
	return nil, nil
}

func (stg *DeliveryStorage) UpdateOffice(req *delivery.UpdateOfficeRequest) (*delivery.InfoResponse, error) {
	return nil, nil
}

func (stg *DeliveryStorage) DeleteOffice(req *delivery.DeleteOfficeRequest) (*delivery.InfoResponse, error) {
	return nil, nil
}
